--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": 
     {
     	"node-getopt": "0.2.x",
-	"express": "4.x" 
+	"express": "4.x", 
+	"body-parser": "1.12.x"
     }
 }
