--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
     "name": "speedtest",
     "description": "Webserver for Network Performance Tests",
     "version": "0.9.0",
-    "dependencies": 
-    {
-    	"node-getopt": "0.2.x",
-	"express": "4.x", 
-	"body-parser": "1.12.x"
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "express": "^4.17.1",
+        "node-getopt": "0.2.x"
     }
 }
